# Fraktale

./: .gitignore  .latexcfg  CMakeLists.txt  Canvas.cpp  Canvas.hpp  Doxyfile  Fractal.cpp  Fractal.hpp  FractalWindow.cpp  FractalWindow.hpp  README.md  main.cpp
ColorModes/: ColorMode.cpp  ColorMode.hpp  Grayscale.cpp  Grayscale.hpp  Identifiers.hpp  SmoothGradient.cpp  SmoothGradient.hpp  WaveLength.cpp  WaveLength.hpp  WaveLengthMode.cpp  WaveLengthMode.hpp
Fractals/: EmptyFractal.cpp  EmptyFractal.hpp  Fractal.cpp  Fractal.hpp  FractalPixel.hpp  FractalPixelIteration.hpp  Identifiers.hpp  Julia.cpp  Julia.hpp  KochCurve.cpp  KochCurve.hpp  Mandelbrot.cpp  Mandelbrot.hpp
Presentation/: beamercolorthemeWuppertal.sty  beamerfontthemeWuppertal.sty  beamerouterthemeWuppertal.sty  beamerthemeWuppertal.sty  buw-logo-trans-300dpi.eps  buw-logo.sty  pres.tex  pspdf.sty
Rendering/: JuliaRenderTask.cpp  JuliaRenderTask.hpp  KochCurveRenderTask.cpp  KochCurveRenderTask.hpp  MandelbrotRenderTask.cpp  MandelbrotRenderTask.hpp  RenderTask.cpp  RenderTask.hpp
assets/: resources.qrc
assets/html/: about.html
